Removed unused imports

--- a/Pump it Up - Data Cleaning.ipynb
+++ b/Pump it Up - Data Cleaning.ipynb
@@ -25,11 +25,7 @@
    "outputs": [],
    "source": [
     "from glob import glob\n",
-    "\n",
-    "import pandas as pd\n",
-    "import numpy as np\n",
-    "\n",
-    "from matplotlib import pyplot as plt"
+    "import pandas as pd"
    ]
   },
   {
