Reformatted markdown cells and dropped id column.

--- a/Pump it Up - Data Cleaning.ipynb
+++ b/Pump it Up - Data Cleaning.ipynb
@@ -546,6 +546,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "**Conclusion:**\n",
+    "\n",
     "* If we observe the above features **extraction_type**, **extraction_type_group** and **extraction_type_class**.\n",
     "\n",
     "* The features _extraction_type_ and _extraction_type_group_ are ambiguous and their values are aggregated to **_extraction_type_class_**."
@@ -612,7 +614,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Similarly values of **management** feature is aggregated into **management_group** "
+    "**Conclusion:** Similarly values of **management** feature is aggregated into **management_group**"
    ]
   },
   {
@@ -673,7 +675,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Similarly values of **payment** feature is aggregated into **payment_type**"
+    "**Conclusion:** Similarly values of **payment** feature is aggregated into **payment_type**"
    ]
   },
   {
@@ -734,7 +736,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Similarly values of **water_quality** feature is aggregated into **quality_group**"
+    "**Conclusion:** Similarly values of **water_quality** feature is aggregated into **quality_group**"
    ]
   },
   {
@@ -791,7 +793,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The value counts in **quantity** and **quantity_group** are all same"
+    "**Conclusion:** The value counts in **quantity** and **quantity_group** are all same"
    ]
   },
   {
@@ -878,7 +880,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Similarly values of **source**, **source_type** features are aggregated into **source_class**"
+    "**Conclusion:** Similarly values of **source**, **source_type** features are aggregated into **source_class**"
    ]
   },
   {
@@ -938,7 +940,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Similarly values of **waterpoint_type** feature is aggregated into **waterpoint_type_group**"
+    "**Conclusion:** Similarly values of **waterpoint_type** feature is aggregated into **waterpoint_type_group**"
    ]
   },
   {
@@ -1083,8 +1085,8 @@
        "water authority       219\n",
        "company               174\n",
        "unknown               122\n",
-       "trust                  27\n",
        "other - school         27\n",
+       "trust                  27\n",
        "Name: management, dtype: int64"
       ]
      },
@@ -1134,8 +1136,8 @@
        "pay per bucket           2281\n",
        "pay monthly              2097\n",
        "unknown                  1992\n",
-       "pay annually              928\n",
        "pay when scheme fails     928\n",
+       "pay annually              928\n",
        "other                     260\n",
        "Name: payment, dtype: int64"
       ]
@@ -1161,8 +1163,8 @@
        "per bucket    2281\n",
        "monthly       2097\n",
        "unknown       1992\n",
-       "annually       928\n",
        "on failure     928\n",
+       "annually       928\n",
        "other          260\n",
        "Name: payment_type, dtype: int64"
       ]
@@ -1433,11 +1435,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "training_data = training_data.drop(columns=['extraction_type', 'extraction_type_group', 'management', \n",
+    "training_data = training_data.drop(columns=['id', 'extraction_type', 'extraction_type_group', 'management', \n",
     "                                            'payment', 'water_quality', 'quantity', 'source', 'source_type', \n",
     "                                            'waterpoint_type'])\n",
     "\n",
-    "test_data = test_data.drop(columns=['extraction_type', 'extraction_type_group', 'management',\n",
+    "test_data = test_data.drop(columns=['id', 'extraction_type', 'extraction_type_group', 'management',\n",
     "                                    'payment', 'water_quality', 'quantity', 'source', 'source_type', \n",
     "                                    'waterpoint_type'])"
    ]
@@ -1447,16 +1449,6 @@
    "metadata": {},
    "source": [
     "## Dumping the cleaned data to CSV"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 43,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "training_data.to_csv('data/train_cleaned.csv', index=False)\n",
-    "test_data.to_csv('data/test_cleaned.csv', index=False)"
    ]
   }
  ],
