Reformatted markdown cells and dropped id column.

--- a/Pump it Up - Data Cleaning.ipynb
+++ b/Pump it Up - Data Cleaning.ipynb
@@ -1085,8 +1085,8 @@
        "water authority       219\n",
        "company               174\n",
        "unknown               122\n",
-       "other - school         27\n",
        "trust                  27\n",
+       "other - school         27\n",
        "Name: management, dtype: int64"
       ]
      },
@@ -1136,8 +1136,8 @@
        "pay per bucket           2281\n",
        "pay monthly              2097\n",
        "unknown                  1992\n",
-       "pay when scheme fails     928\n",
        "pay annually              928\n",
+       "pay when scheme fails     928\n",
        "other                     260\n",
        "Name: payment, dtype: int64"
       ]
@@ -1163,8 +1163,8 @@
        "per bucket    2281\n",
        "monthly       2097\n",
        "unknown       1992\n",
-       "on failure     928\n",
        "annually       928\n",
+       "on failure     928\n",
        "other          260\n",
        "Name: payment_type, dtype: int64"
       ]
@@ -1449,6 +1449,16 @@
    "metadata": {},
    "source": [
     "## Dumping the cleaned data to CSV"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "training_data.to_csv('data/train_cleaned.csv', index=False)\n",
+    "test_data.to_csv('data/test_cleaned.csv', index=False)"
    ]
   }
  ],
