Inspected the columns having nulls.

--- a/Pump it Up - Data Cleaning.ipynb
+++ b/Pump it Up - Data Cleaning.ipynb
@@ -8,7 +8,8 @@
     "\n",
     "1. [Importing the libraries](#1.-Importing-the-libraries)\n",
     "1. [Reading the dataset](#2.-Reading-the-dataset)\n",
-    "1. [Data Cleaning](#3.-Data-Cleaning)"
+    "1. [Data Cleaning](#3.-Data-Cleaning)\n",
+    "1. [Checking and Handling missing values](#4.-Checking-and-Handling-missing-values)"
    ]
   },
   {
@@ -69,8 +70,8 @@
    "outputs": [],
    "source": [
     "# Reading the training data and labels\n",
-    "training_data = pd.read_csv('data/training.csv')\n",
-    "training_labels = pd.read_csv('data/labels.csv')\n",
+    "train_data = pd.read_csv('data/training.csv')\n",
+    "train_labels = pd.read_csv('data/labels.csv')\n",
     "\n",
     "# Reading the test data\n",
     "test_data = pd.read_csv('data/test.csv')"
@@ -93,7 +94,7 @@
     }
    ],
    "source": [
-    "training_data.shape"
+    "train_data.shape"
    ]
   },
   {
@@ -113,7 +114,7 @@
     }
    ],
    "source": [
-    "training_labels.shape"
+    "train_labels.shape"
    ]
   },
   {
@@ -134,9 +135,9 @@
    ],
    "source": [
     "# Merging the training data and labels\n",
-    "training_data = training_data.merge(training_labels, on='id')\n",
+    "train_data = train_data.merge(train_labels, on='id')\n",
     "\n",
-    "training_data.shape"
+    "train_data.shape"
    ]
   },
   {
@@ -368,8 +369,7 @@
     }
    ],
    "source": [
-    "# Looking the dataset\n",
-    "training_data.head()"
+    "train_data.head()"
    ]
   },
   {
@@ -426,8 +426,8 @@
     }
    ],
    "source": [
-    "for col in training_data.columns:\n",
-    "    print(col, training_data[col].nunique())"
+    "for col in train_data.columns:\n",
+    "    print(col, train_data[col].nunique())"
    ]
   },
   {
@@ -479,7 +479,7 @@
     }
    ],
    "source": [
-    "training_data['extraction_type'].value_counts()"
+    "train_data['extraction_type'].value_counts()"
    ]
   },
   {
@@ -512,7 +512,7 @@
     }
    ],
    "source": [
-    "training_data['extraction_type_group'].value_counts()"
+    "train_data['extraction_type_group'].value_counts()"
    ]
   },
   {
@@ -539,7 +539,7 @@
     }
    ],
    "source": [
-    "training_data['extraction_type_class'].value_counts()"
+    "train_data['extraction_type_class'].value_counts()"
    ]
   },
   {
@@ -582,7 +582,7 @@
     }
    ],
    "source": [
-    "training_data['management'].value_counts()"
+    "train_data['management'].value_counts()"
    ]
   },
   {
@@ -607,7 +607,7 @@
     }
    ],
    "source": [
-    "training_data['management_group'].value_counts()"
+    "train_data['management_group'].value_counts()"
    ]
   },
   {
@@ -641,7 +641,7 @@
     }
    ],
    "source": [
-    "training_data['payment'].value_counts()"
+    "train_data['payment'].value_counts()"
    ]
   },
   {
@@ -668,7 +668,7 @@
     }
    ],
    "source": [
-    "training_data['payment_type'].value_counts()"
+    "train_data['payment_type'].value_counts()"
    ]
   },
   {
@@ -703,7 +703,7 @@
     }
    ],
    "source": [
-    "training_data['water_quality'].value_counts()"
+    "train_data['water_quality'].value_counts()"
    ]
   },
   {
@@ -729,7 +729,7 @@
     }
    ],
    "source": [
-    "training_data['quality_group'].value_counts()"
+    "train_data['quality_group'].value_counts()"
    ]
   },
   {
@@ -761,7 +761,7 @@
     }
    ],
    "source": [
-    "training_data['quantity'].value_counts()"
+    "train_data['quantity'].value_counts()"
    ]
   },
   {
@@ -786,7 +786,7 @@
     }
    ],
    "source": [
-    "training_data['quantity_group'].value_counts()"
+    "train_data['quantity_group'].value_counts()"
    ]
   },
   {
@@ -823,7 +823,7 @@
     }
    ],
    "source": [
-    "training_data['source'].value_counts()"
+    "train_data['source'].value_counts()"
    ]
   },
   {
@@ -850,7 +850,7 @@
     }
    ],
    "source": [
-    "training_data['source_type'].value_counts()"
+    "train_data['source_type'].value_counts()"
    ]
   },
   {
@@ -873,7 +873,7 @@
     }
    ],
    "source": [
-    "training_data['source_class'].value_counts()"
+    "train_data['source_class'].value_counts()"
    ]
   },
   {
@@ -907,7 +907,7 @@
     }
    ],
    "source": [
-    "training_data['waterpoint_type'].value_counts()"
+    "train_data['waterpoint_type'].value_counts()"
    ]
   },
   {
@@ -933,7 +933,7 @@
     }
    ],
    "source": [
-    "training_data['waterpoint_type_group'].value_counts()"
+    "train_data['waterpoint_type_group'].value_counts()"
    ]
   },
   {
@@ -1085,8 +1085,8 @@
        "water authority       219\n",
        "company               174\n",
        "unknown               122\n",
-       "trust                  27\n",
        "other - school         27\n",
+       "trust                  27\n",
        "Name: management, dtype: int64"
       ]
      },
@@ -1136,8 +1136,8 @@
        "pay per bucket           2281\n",
        "pay monthly              2097\n",
        "unknown                  1992\n",
-       "pay annually              928\n",
        "pay when scheme fails     928\n",
+       "pay annually              928\n",
        "other                     260\n",
        "Name: payment, dtype: int64"
       ]
@@ -1435,9 +1435,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "training_data = training_data.drop(columns=['id', 'extraction_type', 'extraction_type_group', 'management', \n",
-    "                                            'payment', 'water_quality', 'quantity', 'source', 'source_type', \n",
-    "                                            'waterpoint_type'])\n",
+    "train_data = train_data.drop(columns=['id', 'extraction_type', 'extraction_type_group', 'management', \n",
+    "                                      'payment', 'water_quality', 'quantity', 'source', 'source_type', \n",
+    "                                      'waterpoint_type'])\n",
     "\n",
     "test_data = test_data.drop(columns=['id', 'extraction_type', 'extraction_type_group', 'management',\n",
     "                                    'payment', 'water_quality', 'quantity', 'source', 'source_type', \n",
@@ -1457,8 +1457,138 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "training_data.to_csv('data/train_cleaned.csv', index=False)\n",
+    "train_data.to_csv('data/train_cleaned.csv', index=False)\n",
     "test_data.to_csv('data/test_cleaned.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Till now the cleaned datasets do not contain any ambiguous columns."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Reading cleaned data\n",
+    "train_data = pd.read_csv('data/train_cleaned.csv', parse_dates=['date_recorded'])\n",
+    "test_data = pd.read_csv('data/test_cleaned.csv', parse_dates=['date_recorded'])"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 4. Checking and Handling missing values"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### a. Columns having missing values"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['funder',\n",
+       " 'installer',\n",
+       " 'subvillage',\n",
+       " 'public_meeting',\n",
+       " 'scheme_management',\n",
+       " 'scheme_name',\n",
+       " 'permit']"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data.columns[train_data.isnull().sum() > 0].tolist()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([False, True, nan], dtype=object)"
+      ]
+     },
+     "execution_count": 46,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data.permit.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([True, nan, False], dtype=object)"
+      ]
+     },
+     "execution_count": 47,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data.public_meeting.unique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array(['VWC', 'Other', nan, 'Private operator', 'WUG', 'Water Board',\n",
+       "       'WUA', 'Water authority', 'Company', 'Parastatal', 'Trust', 'SWC',\n",
+       "       'None'], dtype=object)"
+      ]
+     },
+     "execution_count": 48,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_data.scheme_management.unique()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Will try to impute the missing value in case of:\n",
+    "\n",
+    "* permit\n",
+    "* public"
    ]
   }
  ],
