Started working on to impute permit column

--- a/Pump it Up - Data Cleaning.ipynb
+++ b/Pump it Up - Data Cleaning.ipynb
@@ -373,6 +373,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Getting the number of unique values in every column"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
@@ -1085,8 +1092,8 @@
        "water authority       219\n",
        "company               174\n",
        "unknown               122\n",
-       "other - school         27\n",
        "trust                  27\n",
+       "other - school         27\n",
        "Name: management, dtype: int64"
       ]
      },
@@ -1136,8 +1143,8 @@
        "pay per bucket           2281\n",
        "pay monthly              2097\n",
        "unknown                  1992\n",
-       "pay when scheme fails     928\n",
        "pay annually              928\n",
+       "pay when scheme fails     928\n",
        "other                     260\n",
        "Name: payment, dtype: int64"
       ]
@@ -1435,13 +1442,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data = train_data.drop(columns=['id', 'extraction_type', 'extraction_type_group', 'management', \n",
-    "                                      'payment', 'water_quality', 'quantity', 'source', 'source_type', \n",
-    "                                      'waterpoint_type'])\n",
+    "columns_to_drop = ['id', 'recorded_by', 'extraction_type', 'extraction_type_group', \n",
+    "                   'management', 'payment', 'water_quality', 'quantity', \n",
+    "                   'source', 'source_type', 'waterpoint_type']\n",
     "\n",
-    "test_data = test_data.drop(columns=['id', 'extraction_type', 'extraction_type_group', 'management',\n",
-    "                                    'payment', 'water_quality', 'quantity', 'source', 'source_type', \n",
-    "                                    'waterpoint_type'])"
+    "train_data = train_data.drop(columns=columns_to_drop)\n",
+    "\n",
+    "test_data = test_data.drop(columns=columns_to_drop)"
    ]
   },
   {
@@ -1589,6 +1596,171 @@
     "\n",
     "* permit\n",
     "* public"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp_df = train_data.copy()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "VWC                 2133\n",
+       "Water authority      195\n",
+       "Parastatal           170\n",
+       "WUG                  157\n",
+       "Other                150\n",
+       "Water Board           98\n",
+       "WUA                   65\n",
+       "Company               27\n",
+       "Private operator      19\n",
+       "Trust                  1\n",
+       "Name: scheme_management, dtype: int64"
+      ]
+     },
+     "execution_count": 55,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp_df.loc[temp_df['permit'].isna(), ['permit', 'public_meeting', 'scheme_management']]['scheme_management'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "VWC                 34660\n",
+       "WUG                  5049\n",
+       "Water authority      2958\n",
+       "WUA                  2818\n",
+       "Water Board          2650\n",
+       "Parastatal           1510\n",
+       "Private operator     1044\n",
+       "Company              1034\n",
+       "Other                 616\n",
+       "SWC                    97\n",
+       "Trust                  71\n",
+       "None                    1\n",
+       "Name: scheme_management, dtype: int64"
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp_df.loc[~temp_df['permit'].isna(), ['permit', 'public_meeting', 'scheme_management']]['scheme_management'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True     38852\n",
+       "False    17492\n",
+       "Name: permit, dtype: int64"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp_df.loc[~temp_df['permit'].isna(), ['permit', 'public_meeting', 'scheme_management']]['permit'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "VWC                 23469\n",
+       "Water Board          2488\n",
+       "Water authority      2353\n",
+       "WUA                  2338\n",
+       "WUG                  2028\n",
+       "Company              1016\n",
+       "Parastatal            877\n",
+       "Other                 542\n",
+       "Private operator      332\n",
+       "Trust                  44\n",
+       "Name: scheme_management, dtype: int64"
+      ]
+     },
+     "execution_count": 61,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp_df.loc[temp_df['permit'] == True, ['permit', 'public_meeting', \n",
+    "                                        'scheme_management']]['scheme_management'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "VWC                 11191\n",
+       "WUG                  3021\n",
+       "Private operator      712\n",
+       "Parastatal            633\n",
+       "Water authority       605\n",
+       "WUA                   480\n",
+       "Water Board           162\n",
+       "SWC                    97\n",
+       "Other                  74\n",
+       "Trust                  27\n",
+       "Company                18\n",
+       "None                    1\n",
+       "Name: scheme_management, dtype: int64"
+      ]
+     },
+     "execution_count": 62,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "temp_df.loc[temp_df['permit'] == False, ['permit', 'public_meeting', 'scheme_management']]['scheme_management'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "temp_df.loc[temp_df['permit'] == True, ['permit', 'scheme_management', '']]['scheme_management'].value_counts()"
    ]
   }
  ],
