In scheme_management parastatal will be a part of Company

--- a/Pump it Up - Data Cleaning.ipynb
+++ b/Pump it Up - Data Cleaning.ipynb
@@ -1141,8 +1141,8 @@
        "pay per bucket           2281\n",
        "pay monthly              2097\n",
        "unknown                  1992\n",
-       "pay annually              928\n",
        "pay when scheme fails     928\n",
+       "pay annually              928\n",
        "other                     260\n",
        "Name: payment, dtype: int64"
       ]
@@ -1598,8 +1598,8 @@
     "#### Replacing will be done in the following way:\n",
     "* WUA -> WUG\n",
     "* VWC, SWC -> Trust\n",
-    "* Water authority, Parastatal -> Water Board\n",
-    "* Private Operator -> Company"
+    "* Water authority -> Water Board\n",
+    "* Private Operator, Parastatal -> Company"
    ]
   },
   {
@@ -1702,102 +1702,131 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 75,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>funder</th>\n",
+       "      <th>scheme_management</th>\n",
+       "      <th>scheme_name</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>13366</th>\n",
+       "      <td>Mgaya</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31508</th>\n",
+       "      <td>Plan Int</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>33340</th>\n",
+       "      <td>Government Of Tanzania</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>22574</th>\n",
+       "      <td>District Council</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1608</th>\n",
+       "      <td>Kuamu</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>Wasa</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52103</th>\n",
+       "      <td>Danida</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>55213</th>\n",
+       "      <td>Songea Municipal Counci</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>57863</th>\n",
+       "      <td>Songea Municipal Counci</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>Mradi wa maji wa mjimwema</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3725</th>\n",
+       "      <td>Sowasa</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>Mradi wa maji wa mjimwema</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>52443</th>\n",
+       "      <td>Padi</td>\n",
+       "      <td>Other</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>766 rows × 3 columns</p>\n",
+       "</div>"
+      ],
       "text/plain": [
-       "NaN                                      53\n",
-       "Kenswa                                    6\n",
-       "Rain water harvesting                     4\n",
-       "Kanga Dam                                 2\n",
-       "Tungu water piped scheme                  1\n",
-       "Water from DAWASCO                        1\n",
-       "Kirua kahe gravity water supply trust     1\n",
-       "DMK:Anglican church                       1\n",
-       "KINAPA                                    1\n",
-       "Borehole                                  1\n",
-       "Mradi wa Mission                          1\n",
-       "Name: scheme_name, dtype: int64"
+       "                        funder scheme_management                scheme_name\n",
+       "13366                    Mgaya             Other                        NaN\n",
+       "31508                 Plan Int             Other                        NaN\n",
+       "33340   Government Of Tanzania             Other                        NaN\n",
+       "22574         District Council             Other                        NaN\n",
+       "1608                     Kuamu             Other                       Wasa\n",
+       "...                        ...               ...                        ...\n",
+       "52103                   Danida             Other                        NaN\n",
+       "55213  Songea Municipal Counci             Other                        NaN\n",
+       "57863  Songea Municipal Counci             Other  Mradi wa maji wa mjimwema\n",
+       "3725                    Sowasa             Other  Mradi wa maji wa mjimwema\n",
+       "52443                     Padi             Other                        NaN\n",
+       "\n",
+       "[766 rows x 3 columns]"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 75,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "temp_df.loc[temp_df.scheme_management == 'Trust', 'scheme_name'].value_counts(dropna=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 55,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "NaN                                      247\n",
-       "Borehole                                 242\n",
-       "Uroki-Bomang'ombe water sup              209\n",
-       "Kirua kahe gravity water supply trust    191\n",
-       "Losaa-Kia water supply                   152\n",
-       "                                        ... \n",
-       "Wanging'ombe gravity Scheme                1\n",
-       "TM lawate  water supply                    1\n",
-       "Kinaduma  water supply                     1\n",
-       "Msengoni B water supply                    1\n",
-       "Loronu water supply                        1\n",
-       "Name: scheme_name, Length: 270, dtype: int64"
-      ]
-     },
-     "execution_count": 55,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "temp_df.loc[temp_df.scheme_management == 'Water Board', 'scheme_name'].value_counts(dropna=False)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 56,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "NaN                            935\n",
-       "Ngana water supplied scheme     87\n",
-       "Mgandazi                        65\n",
-       "Kasangezi                       64\n",
-       "World Bank                      60\n",
-       "                              ... \n",
-       "Namtibwili                       1\n",
-       "Kwanaraga                        1\n",
-       "None                             1\n",
-       "Miseti                           1\n",
-       "Mweka                            1\n",
-       "Name: scheme_name, Length: 234, dtype: int64"
-      ]
-     },
-     "execution_count": 56,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "temp_df.loc[temp_df.scheme_management == 'Water authority', 'scheme_name'].value_counts(dropna=False)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "Clubbing Water authority into Water Board is a right decision because we can observe **Water Supply** value in scheme_name"
+    "temp_df.loc[(temp_df.scheme_management == 'Other'), ['funder', 'scheme_management', 'scheme_name']]"
    ]
   }
  ],
